--- a/Project/Engine/Engine.vcxproj.filters
+++ b/Project/Engine/Engine.vcxproj.filters
@@ -127,6 +127,9 @@
     <ClInclude Include="CMissileScript.h">
       <Filter>09.Script\Missile</Filter>
     </ClInclude>
+    <ClInclude Include="CGarbageCollector.h">
+      <Filter>04.Manager\GarbageCollector</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CEngine.cpp">
@@ -221,6 +224,9 @@
     </ClCompile>
     <ClCompile Include="CMissileScript.cpp">
       <Filter>09.Script\Missile</Filter>
+    </ClCompile>
+    <ClCompile Include="CGarbageCollector.cpp">
+      <Filter>04.Manager\GarbageCollector</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -331,6 +337,9 @@
     </Filter>
     <Filter Include="09.Script\Missile">
       <UniqueIdentifier>{33906313-8097-488f-90c1-27d25b989ee2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="04.Manager\GarbageCollector">
+      <UniqueIdentifier>{39f456ab-9f8c-4f6d-9446-ae513d0baa78}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
