--- a/Project/Client/imgui.ini
+++ b/Project/Client/imgui.ini
@@ -4,19 +4,22 @@ Size=400,400
 Collapsed=0
 
 [Window][My Scene]
-Pos=850,439
-Size=350,261
+ViewportPos=1427,472
+ViewportId=0xA4D966FE
+Pos=0,421
+Size=350,263
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Dear ImGui Demo]
-Pos=850,20
-Size=350,417
+ViewportPos=1427,472
+ViewportId=0xA4D966FE
+Size=350,419
 Collapsed=0
 DockId=0x00000002,0
 
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=1490,391 Size=350,680 Split=Y
+DockNode    ID=0x00000001 Pos=1427,472 Size=350,684 Split=Y
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=350,417 Selected=0xE87781F4
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=350,261 Selected=0x18B0E82D
 
