--- a/Project/Engine/Engine.vcxproj.filters
+++ b/Project/Engine/Engine.vcxproj.filters
@@ -73,9 +73,6 @@
     <ClInclude Include="types.h">
       <Filter>01.Header\etc</Filter>
     </ClInclude>
-    <ClInclude Include="struct.h">
-      <Filter>01.Header\etc</Filter>
-    </ClInclude>
     <ClInclude Include="singleton.h">
       <Filter>01.Header\etc</Filter>
     </ClInclude>
@@ -125,7 +122,7 @@
       <Filter>09.Script\Missile</Filter>
     </ClInclude>
     <ClInclude Include="CGarbageCollector.h">
-      <Filter>04.Manager\GarbageCollector</Filter>
+      <Filter>04.Manager\GC</Filter>
     </ClInclude>
     <ClInclude Include="CMaterial.h">
       <Filter>05.Asset\Material</Filter>
@@ -138,6 +135,9 @@
     </ClInclude>
     <ClInclude Include="CRenderMgr.h">
       <Filter>04.Manager\Render</Filter>
+    </ClInclude>
+    <ClInclude Include="struct.h">
+      <Filter>01.Header</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -232,7 +232,7 @@
       <Filter>09.Script\Missile</Filter>
     </ClCompile>
     <ClCompile Include="CGarbageCollector.cpp">
-      <Filter>04.Manager\GarbageCollector</Filter>
+      <Filter>04.Manager\GC</Filter>
     </ClCompile>
     <ClCompile Include="CMaterial.cpp">
       <Filter>05.Asset\Material</Filter>
@@ -356,9 +356,6 @@
     <Filter Include="09.Script\Missile">
       <UniqueIdentifier>{33906313-8097-488f-90c1-27d25b989ee2}</UniqueIdentifier>
     </Filter>
-    <Filter Include="04.Manager\GarbageCollector">
-      <UniqueIdentifier>{39f456ab-9f8c-4f6d-9446-ae513d0baa78}</UniqueIdentifier>
-    </Filter>
     <Filter Include="05.Asset\Material">
       <UniqueIdentifier>{383f6b96-fa20-4533-86cb-f34b40d84ad6}</UniqueIdentifier>
     </Filter>
@@ -370,6 +367,9 @@
     </Filter>
     <Filter Include="04.Manager\Render">
       <UniqueIdentifier>{84b21adf-da8d-4f41-b506-c98863af55d2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="04.Manager\GC">
+      <UniqueIdentifier>{39f456ab-9f8c-4f6d-9446-ae513d0baa78}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -385,6 +385,9 @@
       <Filter>Shader</Filter>
     </FxCompile>
     <FxCompile Include="value.fx">
+      <Filter>Shader</Filter>
+    </FxCompile>
+    <FxCompile Include="debug2d.fx">
       <Filter>Shader</Filter>
     </FxCompile>
   </ItemGroup>
