--- a/Project/Engine/Engine.vcxproj.filters
+++ b/Project/Engine/Engine.vcxproj.filters
@@ -139,6 +139,9 @@
     <ClInclude Include="struct.h">
       <Filter>01.Header</Filter>
     </ClInclude>
+    <ClInclude Include="CCollider2D.h">
+      <Filter>07.Component\Collider2D</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CEngine.cpp">
@@ -245,6 +248,9 @@
     </ClCompile>
     <ClCompile Include="CRenderMgr.cpp">
       <Filter>04.Manager\Render</Filter>
+    </ClCompile>
+    <ClCompile Include="CCollider2D.cpp">
+      <Filter>07.Component\Collider2D</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -370,6 +376,9 @@
     </Filter>
     <Filter Include="04.Manager\GC">
       <UniqueIdentifier>{39f456ab-9f8c-4f6d-9446-ae513d0baa78}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="07.Component\Collider2D">
+      <UniqueIdentifier>{eb5217a7-58cb-43be-8932-d28b3c5ee6a2}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
