--- a/Project/Client/imgui.ini
+++ b/Project/Client/imgui.ini
@@ -4,19 +4,22 @@ Size=400,400
 Collapsed=0
 
 [Window][My Scene]
-Pos=931,437
+ViewportPos=1750,453
+ViewportId=0xA4D966FE
+Pos=0,368
 Size=338,229
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Dear ImGui Demo]
-Pos=931,69
+ViewportPos=1750,453
+ViewportId=0xA4D966FE
 Size=338,366
 Collapsed=0
 DockId=0x00000002,0
 
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=1571,440 Size=338,597 Split=Y
+DockNode    ID=0x00000001 Pos=1750,453 Size=338,597 Split=Y
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=350,417 Selected=0xE87781F4
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=350,261 Selected=0x18B0E82D
 
