--- a/Project/Engine/Engine.vcxproj
+++ b/Project/Engine/Engine.vcxproj
@@ -166,6 +166,7 @@ call EngineCopy.bat</Command>
     <ClInclude Include="CCamera.h" />
     <ClInclude Include="CCameraScript.h" />
     <ClInclude Include="CCollider2D.h" />
+    <ClInclude Include="CCollisionMgr.h" />
     <ClInclude Include="CComponent.h" />
     <ClInclude Include="CConstantBuffer.h" />
     <ClInclude Include="CEngine.h" />
@@ -214,6 +215,7 @@ call EngineCopy.bat</Command>
     <ClCompile Include="CCamera.cpp" />
     <ClCompile Include="CCameraScript.cpp" />
     <ClCompile Include="CCollider2D.cpp" />
+    <ClCompile Include="CCollisionMgr.cpp" />
     <ClCompile Include="CComponent.cpp" />
     <ClCompile Include="CConstantBuffer.cpp" />
     <ClCompile Include="CEngine.cpp" />
