CTexture) Create() 오버로드 하여 인자로 ComPtr<ID3D11Texture2D> 객체를 받을 수 있도록 함 / CAssetMgr) CreateTexture() 의 인자로 Key값을 받아 저장공간에 이미 존재하는 Texture인지 확인 할 수 있도록 함, 또한 오버로드하여 ComPtr<ID3D11Texture2D> 객체를 인자로 받을 수 있도록 함

--- a/Project/Engine/Engine.vcxproj
+++ b/Project/Engine/Engine.vcxproj
@@ -221,6 +221,7 @@ call EngineCopy.bat</Command>
     <ClCompile Include="CAnimator2D.cpp" />
     <ClCompile Include="CAsset.cpp" />
     <ClCompile Include="CAssetMgr.cpp" />
+    <ClCompile Include="CAssetMgr_Init.cpp" />
     <ClCompile Include="CCamera.cpp" />
     <ClCompile Include="CCameraScript.cpp" />
     <ClCompile Include="CCollider2D.cpp" />
