--- a/Project/Client/imgui.ini
+++ b/Project/Client/imgui.ini
@@ -4,19 +4,29 @@ Size=400,400
 Collapsed=0
 
 [Window][My Scene]
-Pos=912,420
-Size=338,193
+Pos=928,36
+Size=338,503
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Dear ImGui Demo]
-Pos=912,110
-Size=338,308
+Pos=928,36
+Size=338,503
 Collapsed=0
 DockId=0x00000002,0
 
+[Window][Hello, world!]
+Pos=32,168
+Size=339,180
+Collapsed=0
+
+[Window][About Dear ImGui]
+Pos=66,49
+Size=570,126
+Collapsed=0
+
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=1552,481 Size=338,503 Split=Y
+DockNode    ID=0x00000001 Pos=1404,492 Size=338,503 Split=Y
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=350,417 Selected=0xE87781F4
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=350,261 Selected=0x18B0E82D
 
