--- a/Project/Client/Client.vcxproj
+++ b/Project/Client/Client.vcxproj
@@ -146,6 +146,7 @@
   <ItemGroup>
     <ClInclude Include="CImGuiMgr.h" />
     <ClInclude Include="Client.h" />
+    <ClInclude Include="CUI.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="imgui\imconfig.h" />
     <ClInclude Include="imgui\imgui.h" />
@@ -163,6 +164,7 @@
   <ItemGroup>
     <ClCompile Include="CImGuiMgr.cpp" />
     <ClCompile Include="Client.cpp" />
+    <ClCompile Include="CUI.cpp" />
     <ClCompile Include="imgui\imgui.cpp" />
     <ClCompile Include="imgui\imgui_demo.cpp" />
     <ClCompile Include="imgui\imgui_draw.cpp" />
