UI 생성(Content, Outliner, Inspector)

--- a/Project/Client/Client.vcxproj
+++ b/Project/Client/Client.vcxproj
@@ -144,8 +144,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="CContent.h" />
     <ClInclude Include="CImGuiMgr.h" />
+    <ClInclude Include="CInspector.h" />
     <ClInclude Include="Client.h" />
+    <ClInclude Include="COutliner.h" />
     <ClInclude Include="CUI.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="imgui\imconfig.h" />
@@ -162,8 +165,11 @@
     <ClInclude Include="value_client.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CContent.cpp" />
     <ClCompile Include="CImGuiMgr.cpp" />
+    <ClCompile Include="CInspector.cpp" />
     <ClCompile Include="Client.cpp" />
+    <ClCompile Include="COutliner.cpp" />
     <ClCompile Include="CUI.cpp" />
     <ClCompile Include="imgui\imgui.cpp" />
     <ClCompile Include="imgui\imgui_demo.cpp" />
