--- a/Project/Client/Client.vcxproj.filters
+++ b/Project/Client/Client.vcxproj.filters
@@ -29,6 +29,15 @@
     <Filter Include="UI">
       <UniqueIdentifier>{6d91bd96-d08a-4f72-a090-710f1fb5e0f4}</UniqueIdentifier>
     </Filter>
+    <Filter Include="UI\Outliner">
+      <UniqueIdentifier>{f1e970f2-bf4f-418c-a22b-67f296cdf5e7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="UI\Inspector">
+      <UniqueIdentifier>{ffefc513-49f7-4547-bf4b-37507ba0ab98}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="UI\Content">
+      <UniqueIdentifier>{f034460c-44be-4b17-9411-745e882639e3}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -79,6 +88,15 @@
     <ClInclude Include="CUI.h">
       <Filter>UI</Filter>
     </ClInclude>
+    <ClInclude Include="COutliner.h">
+      <Filter>UI\Outliner</Filter>
+    </ClInclude>
+    <ClInclude Include="CInspector.h">
+      <Filter>UI\Inspector</Filter>
+    </ClInclude>
+    <ClInclude Include="CContent.h">
+      <Filter>UI\Content</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Client.rc">
@@ -126,6 +144,15 @@
     </ClCompile>
     <ClCompile Include="CUI.cpp">
       <Filter>UI</Filter>
+    </ClCompile>
+    <ClCompile Include="COutliner.cpp">
+      <Filter>UI\Outliner</Filter>
+    </ClCompile>
+    <ClCompile Include="CInspector.cpp">
+      <Filter>UI\Inspector</Filter>
+    </ClCompile>
+    <ClCompile Include="CContent.cpp">
+      <Filter>UI\Content</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
