Overlay 창 추가 및 UI창 옵션 설정 기능 추가

--- a/Project/Client/Client.vcxproj
+++ b/Project/Client/Client.vcxproj
@@ -149,6 +149,7 @@
     <ClInclude Include="CInspector.h" />
     <ClInclude Include="Client.h" />
     <ClInclude Include="COutliner.h" />
+    <ClInclude Include="COverlay.h" />
     <ClInclude Include="CUI.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="imgui\imconfig.h" />
@@ -170,6 +171,7 @@
     <ClCompile Include="CInspector.cpp" />
     <ClCompile Include="Client.cpp" />
     <ClCompile Include="COutliner.cpp" />
+    <ClCompile Include="COverlay.cpp" />
     <ClCompile Include="CUI.cpp" />
     <ClCompile Include="imgui\imgui.cpp" />
     <ClCompile Include="imgui\imgui_demo.cpp" />
